On branch rewrite Your branch is up to date with 'origin/rewrite'.
Changes to be committed:
	new file:   archieve/bootstrap.sh
	new file:   archieve/homelab.sh
	modified:   bootstrap.sh
	modified:   config/apps.yml
	modified:   config/executables.list
	modified:   config/profiles.yml
	new file:   docs/developers/README.md
	new file:   docs/developers/contributing.md
	new file:   docs/developers/development-plan.md
	new file:   docs/developers/sprint-plan.md
	new file:   docs/examples/latest.env.example
	new file:   docs/examples/summary.json.example
	new file:   docs/examples/templates-manifest.json.example
	new file:   docs/examples/terraform-outputs.json.example
	modified:   docs/specs/00-index.md
	modified:   docs/specs/01-functional-overview.md
	modified:   docs/specs/02-config-and-state-schema.md
	modified:   docs/specs/06-apps-pipeline-spec.md
	new file:   docs/specs/20-low-level/21-run-lifecycle-state-machine.md
	new file:   docs/specs/20-low-level/22-logging-format-and-reports.md
	new file:   docs/specs/20-low-level/23-validation-rules.md
	new file:   docs/specs/20-low-level/24-platform-and-version-policy.md
	new file:   docs/specs/20-low-level/25-infra-handoff-contracts.md
	new file:   docs/specs/20-low-level/26-module-interface-contract.md
	new file:   docs/specs/20-low-level/27-dialog-ux-spec.md
	new file:   docs/specs/20-low-level/README.md
	new file:   docs/specs/20-low-level/commands/ansible_apply.md
	new file:   docs/specs/20-low-level/commands/apps_install.md
	new file:   docs/specs/20-low-level/commands/apps_uninstall.md
	new file:   docs/specs/20-low-level/commands/cleanup.md
	new file:   docs/specs/20-low-level/commands/diagnostics.md
	new file:   docs/specs/20-low-level/commands/menu.md
	new file:   docs/specs/20-low-level/commands/profiles.md
	new file:   docs/specs/20-low-level/commands/proxmox_access.md
	new file:   docs/specs/20-low-level/commands/selections.md
	new file:   docs/specs/20-low-level/commands/templates.md
	new file:   docs/specs

--- a/config/apps.yml
+++ b/config/apps.yml
@@ -1,20 +1,100 @@
 apps:
-  docker:
-    label: "Docker Engine"
-    install: "modules/apps/install/docker.sh"
-    uninstall: "modules/apps/uninstall/docker.sh"
+  curl:
+    name: "Curl"
+    description: "HTTP client for downloads and API calls"
+    category: "core"
+    install:
+      module: "modules/apps/install/curl.sh"
+    uninstall:
+      module: "modules/apps/uninstall/curl.sh"
+    requires:
+      commands: ["curl"]
+    provides: ["http_client"]
+    default_selected: true
 
-  tailscale:
-    label: "Tailscale"
-    install: "modules/apps/install/tailscale.sh"
-    uninstall: "modules/apps/uninstall/tailscale.sh"
+  jq:
+    name: "jq"
+    description: "JSON parser used for automation glue and Terraform outputs"
+    category: "core"
+    install:
+      module: "modules/apps/install/jq.sh"
+    uninstall:
+      module: "modules/apps/uninstall/jq.sh"
+    requires:
+      commands: ["jq"]
+    provides: ["json_tools"]
+    default_selected: true
+
+  yq:
+    name: "yq"
+    description: "YAML processor used for config and inventory manipulation"
+    category: "core"
+    install:
+      module: "modules/apps/install/yq.sh"
+    uninstall:
+      module: "modules/apps/uninstall/yq.sh"
+    requires:
+      commands: ["yq"]
+    provides: ["yaml_tools"]
+    default_selected: true
+
+  openssh_client:
+    name: "OpenSSH client"
+    description: "SSH client used for host access and Ansible connectivity"
+    category: "core"
+    install:
+      module: "modules/apps/install/openssh_client.sh"
+    uninstall:
+      module: "modules/apps/uninstall/openssh_client.sh"
+    requires:
+      commands: ["ssh"]
+    provides: ["ssh_client"]
+    default_selected: true
 
   terraform:
-    label: "Terraform (IaC)"
-    install: "modules/apps/install/terraform.sh"
-    uninstall: "modules/apps/uninstall/terraform.sh"
+    name: "Terraform"
+    description: "Infrastructure provisioning tool (IaC)"
+    category: "infra"
+    install:
+      module: "modules/apps/install/terraform.sh"
+    uninstall:
+      module: "modules/apps/uninstall/terraform.sh"
+    requires:
+      commands: ["terraform"]
+    provides: ["iac"]
 
   ansible:
-    label: "Ansible (Configuration)"
-    install: "modules/apps/install/ansible.sh"
-    uninstall: "modules/apps/uninstall/ansible.sh"
+    name: "Ansible"
+    description: "Configuration management tool"
+    category: "infra"
+    install:
+      module: "modules/apps/install/ansible.sh"
+    uninstall:
+      module: "modules/apps/uninstall/ansible.sh"
+    requires:
+      commands: ["ansible-playbook"]
+    provides: ["cm"]
+
+  docker:
+    name: "Docker Engine"
+    description: "Container runtime for local workloads"
+    category: "container"
+    install:
+      module: "modules/apps/install/docker.sh"
+    uninstall:
+      module: "modules/apps/uninstall/docker.sh"
+    requires:
+      commands: ["docker"]
+    provides: ["container_runtime"]
+
+  tailscale:
+    name: "Tailscale"
+    description: "Secure mesh VPN for remote access"
+    category: "network"
+    install:
+      module: "modules/apps/install/tailscale.sh"
+    uninstall:
+      module: "modules/apps/uninstall/tailscale.sh"
+    requires:
+      commands: ["tailscale"]
+    provides: ["vpn"]
