On branch rewrite Your branch is up to date with 'origin/rewrite'.
Changes to be committed:
	modified:   .gitignore
	new file:   bin/dev/test_runtime.sh
	modified:   bootstrap.sh
	modified:   docs/developers/README.md
	modified:   docs/developers/contributing.md
	new file:   docs/developers/development-standards.md
	modified:   homelab.sh
	new file:   install.sh
	modified:   lib/env.sh
	modified:   lib/logger.sh
	modified:   lib/runtime.sh
	modified:   lib/ui_dialog.sh
	modified:   lib/validation.sh
	modified:   state/runs/latest.env

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ terraform/*.tfstate*
 
 # Homelab state (do not commit)
 **/state.env
-**/logs/
 
 # Secrets
 **/*.sops.*
@@ -28,3 +27,9 @@ terraform/*.tfstate*
 .local/.homelab_repo_root
 .homelab_repo_root
 t.sh
+# Keep the runs directory itself in the repo
+!state/runs/.gitkeep
+!state/logs/.gitkeep
+# Ignore everything inside it (all subfolders and files)
+state/runs/*
+state/logs/*
