On branch rewrite Your branch is up to date with 'origin/rewrite'.
Changes to be committed:
	modified:   .gitignore
	modified:   README.md
	modified:   archieve/bootstrap.sh
	modified:   archieve/homelab.sh
	modified:   bootstrap.sh
	modified:   commands/ansible_apply.sh
	modified:   commands/apps_install.sh
	modified:   commands/apps_uninstall.sh
	modified:   commands/cleanup.sh
	modified:   commands/diagnostics.sh
	modified:   commands/menu.sh
	modified:   commands/profiles.sh
	modified:   commands/proxmox_access.sh
	modified:   commands/selections.sh
	modified:   commands/templates.sh
	modified:   commands/terraform_apply.sh
	modified:   docs/developers/architecture.md
	modified:   docs/developers/runtime.md
	modified:   docs/specs/04-bootstrap-spec.md
	modified:   docs/specs/05-menu-and-command-contracts.md
	modified:   docs/specs/15-security-and-secrets-spec.md
	modified:   homelab.sh
	modified:   install.sh
	new file:   lib/command_runner.sh
	modified:   lib/common.sh
	modified:   lib/config.sh
	modified:   lib/runtime.sh
	new file:   lib/secrets.sh
	modified:   lib/validation.sh

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,14 @@ terraform/*.tfstate*
 *.sops.yaml.dec
 **/secrets.yaml
 **/secrets.yml
+
+# Local config overrides (not committed)
+config/local.env
+
+# Runtime state files (not committed)
+state/secrets.env
+state/proxmox.env
+state/selections.env
 # Local-only files
 .local/.homelab_repo_root
 .homelab_repo_root
