On branch rewrite Your branch is up to date with 'origin/rewrite'.
Changes to be committed:
	modified:   .gitignore
	modified:   commands/diagnostics.sh
	modified:   commands/menu.sh
	modified:   homelab.sh
	modified:   lib/ui_dialog.sh
	deleted:    state/proxmox.env
	deleted:    state/runs/latest.env
	deleted:    state/secrets.env
	deleted:    state/selections.env

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ config/local.env
 state/secrets.env
 state/proxmox.env
 state/selections.env
+state/runs/latest.env
 # Local-only files
 .local/.homelab_repo_root
 .homelab_repo_root
@@ -41,3 +42,4 @@ t.sh
 # Ignore everything inside it (all subfolders and files)
 state/runs/*
 state/logs/*
+
