--- a/docs/examples/latest.env.example
+++ b/docs/examples/latest.env.example
@@ -6,8 +6,8 @@ RUN_ID=20260130-214455-a3f2
 RUN_TIMESTAMP=2026-01-30T21:44:55+13:00
 DRY_RUN=false
 
-SELECTED_PROFILE=infra_core
-SELECTED_APPS_INSTALL=curl,jq,yq,openssh_client,terraform,ansible
+SELECTED_PROFILE=admin_control_plane
+SELECTED_APPS_INSTALL=openssh_server,git,curl,wget,ca_certificates,gnupg,lsb_release,jq,yq,python3,python3_venv,pipx,terraform,ansible,ansible_lint,sops,age
 SELECTED_APPS_UNINSTALL=
 
 PROXMOX_API_URL=https://proxmox.local:8006
