On branch 20250205 Your branch is up to date with 'origin/20250205'.
Changes to be committed:
	modified:   install.sh
	modified:   requirements.txt
	modified:   tools/fhl_menu/README.md
	modified:   tools/repo_tools/branch_tool.sh

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # =============================================================================
-# File: tools/fhl_menu/requirements.txt
+# File: requirements.txt
 # Project: Fouchger HomeLab Menu (fhl_menu)
 # Purpose: Runtime dependencies only (minimum required for menu + logging).
 # Developer notes:
