--- a/tools/fhl_menu/pyproject.toml
+++ b/tools/fhl_menu/pyproject.toml
@@ -14,6 +14,10 @@ version = "0.1.0"
 description = "Fouchger HomeLab production-ready Textual menu with logging and settings persistence."
 requires-python = ">=3.9"
 
+
+[project.scripts]
+fhl-menu = "fhl_menu.__main__:main"
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
