--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,22 @@ version = "0.1.0"
 description = "Homelab control plane TUI for Proxmox, Ansible, Terraform, and Packer"
 requires-python = ">=3.11"
 dependencies = [
-  "textual>=0.60.0",
-  "rich>=13.0.0",
-  "pyyaml>=6.0.0",
-  "httpx>=0.27.0",
+  "textual>=7.5.0,<8",
+  "rich>=14.3.2,<15",
+  "pyyaml>=6.0.3,<7",
+  "httpx>=0.28.1,<0.29",
+]
+
+[project.optional-dependencies]
+dev = [
+  "textual[dev]>=7.5.0,<8",
 ]
 
 [project.scripts]
 fouchger-homelab = "fouchger_homelab.app:main"
 
 [build-system]
-requires = ["setuptools>=69"]
+requires = ["setuptools>=80.10.2,<81"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
